--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-components",
-  "description": "A Vue.js project",
+  "name": "multiple-page-vue-webpack-example",
+  "description": "The multiple page vue example for webpack",
   "author": "packy <lpreterite@126.com>",
   "private": true,
   "scripts": {
@@ -36,7 +36,9 @@
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.9.0",
     "ora": "^0.3.0",
+    "postcss-easysprites": "^0.1.7",
     "postcss-loader": "^0.11.1",
+    "postcss-scss": "^0.3.0",
     "precss": "^1.4.0",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.1",
